@@ -24,6 +24,7 @@ EXTRA_DIST = \
 	long-names.post.exp long-names.stderr.exp long-names.vgtest \
 	long-time.post.exp long-time.stderr.exp long-time.vgtest \
 	malloc_usable.stderr.exp malloc_usable.vgtest \
+	mmapunmap.post.exp mmapunmap.stderr.exp mmapunmap.vgtest \
 	new-cpp.post.exp new-cpp.stderr.exp new-cpp.vgtest \
 	no-stack-no-heap.post.exp no-stack-no-heap.stderr.exp no-stack-no-heap.vgtest \
 	null.post.exp null.stderr.exp null.vgtest \
@@ -61,6 +62,7 @@ check_PROGRAMS = \
 	insig \
 	long-names \
 	long-time \
+	mmapunmap \
 	malloc_usable \
 	new-cpp \
 	null \
